[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "apk-helper"
version = "59.0.0"
description = "GUI tool for batch analysis and forensic harvesting of Android APK files"
requires-python = ">=3.9"
dependencies = [
    "customtkinter>=5.2.0",
    "psutil>=5.9.0",
    "androguard>=3.3.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
apk-helper = "apk_master:main"
afkb = "afkb:main"
